<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExistingSessions">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/existing_sessions_default_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/existing_sessions_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            app:flexDirection="row"
            app:justifyContent="center"
            app:alignItems="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="6dp"
                android:src="@drawable/splash_screen_logo"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/splash_screen_app_name"/>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/existing_sessions_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="row"
            app:justifyContent="space_between"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/existing_sessions_title"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_alignSelf="center"
                android:text="@string/existing_sessions_title"
                android:textSize="24sp" />

            <Button
                android:id="@+id/existing_sessions_create_new_session_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_alignSelf="center"
                android:background="@drawable/web_view_gradient_button_rounded_background"
                app:backgroundTint="@null"
                android:paddingHorizontal="16dp"
                android:paddingVertical="0dp"
                android:text="@string/create_new_session_button"
                android:textSize="10sp"
                tools:ignore="SmallSp" />


        </com.google.android.flexbox.FlexboxLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/existing_sessions_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:queryHint="Search"
            android:background="@drawable/search_view_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/existing_sessions_header"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/existing_sessions_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/existing_sessions_search_view"/>

        <TextView
            android:id="@+id/existing_sessions_empty_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_existing_sessions_placeholder"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/existing_sessions_header"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/existing_session_delete_confirmation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_AA"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="75dp"
            android:layout_gravity="center"
            android:paddingVertical="16dp"
            android:paddingHorizontal="24dp"
            android:background="@drawable/deleted_session_acknowledgement_background"
            app:justifyContent="center"
            app:alignItems="center"
            app:flexDirection="column">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                app:layout_alignSelf="center"
                android:text="Are you sure you want to delete this session?"
                android:textSize="16sp"
                android:maxWidth="200dp"
                android:gravity="center"
                android:textColor="@color/black"/>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                app:flexDirection="row"
                app:justifyContent="space_evenly"
                app:alignItems="center">

                <Button
                    android:id="@+id/delete_session_cancel_button"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:background="@drawable/gradient_button_rounded_background"
                    app:backgroundTint="@null"
                    android:text="No"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/delete_session_accept_button"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:background="@drawable/gradient_button_rounded_background"
                    app:backgroundTint="@null"
                    android:text="Yes"
                    android:textSize="12sp"/>

            </com.google.android.flexbox.FlexboxLayout>

        </com.google.android.flexbox.FlexboxLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>