<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="-80dp"
        android:src="@drawable/splash_screen_up_component"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-80dp"
        android:layout_marginBottom="-120dp"
        android:src="@drawable/splash_screen_down_component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:flexDirection="column"
        app:justifyContent="center"
        app:alignItems="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:src="@drawable/splash_screen_app_name"/>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="column"
            android:layout_marginVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_alignSelf="flex_start"
                android:text="Link"
                android:alpha="0.75"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/enter_link_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:padding="12dp"
                android:hint="@string/enter_new_link"
                android:textColor="@color/black"
                android:textColorHint="@color/black_AA"
                android:background="@drawable/edit_text_rounded_background"
                android:inputType="textMultiLine"
                android:textSize="14sp" />

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexDirection="column"
            android:layout_marginVertical="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_alignSelf="flex_start"
                android:text="Title"
                android:alpha="0.75"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/enter_user_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:padding="12dp"
                android:hint="@string/enter_title"
                android:textColor="@color/black"
                android:textColorHint="@color/black_AA"
                android:background="@drawable/edit_text_rounded_background"
                android:inputType="textMultiLine"
                android:textSize="14sp" />

        </com.google.android.flexbox.FlexboxLayout>

        <Button
            android:id="@+id/open_web_view_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:background="@drawable/gradient_button_rounded_background"
            app:backgroundTint="@null"
            android:text="@string/open_link"
            android:textSize="20sp"/>

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginVertical="4dp"-->
<!--            app:layout_alignSelf="center"-->
<!--            android:text="OR"-->
<!--            android:textSize="16sp"-->
<!--            android:alpha="0.75"-->
<!--            android:textColor="@color/black"/>-->

<!--        <Button-->
<!--            android:id="@+id/open_existing_sessions_button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginVertical="8dp"-->
<!--            android:background="@drawable/gradient_button_rounded_background"-->
<!--            app:backgroundTint="@null"-->
<!--            android:textSize="20sp"-->
<!--            android:text="@string/open_existing_sessions"/>-->


<!--        <LinearLayout-->
<!--            android:id="@+id/delete_existing_sessions_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:visibility="gone"-->
<!--            android:gravity="center"-->
<!--            android:layout_marginVertical="16dp">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginVertical="4dp"-->
<!--                app:layout_alignSelf="center"-->
<!--                android:text="@string/delete_existing_sessions"-->
<!--                android:textSize="16sp"-->
<!--                android:textColor="@color/red"/>-->

<!--            <ImageView-->
<!--                android:layout_width="16dp"-->
<!--                android:layout_height="24dp"-->
<!--                android:layout_marginStart="8dp"-->
<!--                android:src="@drawable/delete_session_icon"/>-->

<!--        </LinearLayout>-->

    </com.google.android.flexbox.FlexboxLayout>

    <FrameLayout
        android:id="@+id/session_file_deleted_acknowledgement"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_AA"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="16dp"
            android:paddingHorizontal="24dp"
            android:background="@drawable/deleted_session_acknowledgement_background"
            app:justifyContent="center"
            app:alignItems="center"
            app:flexDirection="column">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                app:layout_alignSelf="center"
                android:text="Your session list has been cleared."
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/deleted_session_file_acknowledgement_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@drawable/gradient_button_rounded_background"
                app:backgroundTint="@null"
                android:text="Okay"
                android:textSize="14sp"/>

        </com.google.android.flexbox.FlexboxLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>